--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
+  "name": "medical-chatbot",
+  "version": "1.0.0",
+  "description": "Interactive Medical Chatbot",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "axios": "^1.10.0",
-    "body-parser": "^2.2.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "form-data": "^4.0.3",
-    "multer": "^2.0.1",
-    "uuid": "^11.1.0"
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.2",
+    "multer": "^1.4.5-lts.1",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.2"
   }
 }
